[project]
name = "ai-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.13.0",
    "langchain>=0.3.28",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "ollama>=0.6.1",
    "pypdf>=6.10.2",
    "streamlit>=1.50.0",
]
